index file updated

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <marquee direction="right">
-            <h2>Login Form</h2></marquee>
+            <h2>Login Form</h2>
             <form>
                 <div class="inputbox">
                     <input type="text" name="" placeholder="Username">
